Fix overflow issues

--- a/src/stylesheets/pages/_inspector.scss
+++ b/src/stylesheets/pages/_inspector.scss
@@ -17,7 +17,6 @@ h2 {
 
 .header-cta {
   overflow: hidden;
-  width: 100%;
   max-width: 1000px;
   padding: 25px 50px 0;
   margin: 0 auto;
@@ -126,7 +125,6 @@ footer {
   margin: 40px auto -75px;
   max-width: 868px;
   width: 100%;
-  height: 392px;
   box-shadow: 0px 30px 80px rgba(0, 0, 0, 0.27);
   font-size: 0;
 
